refactor: Http 요청 객체와 InputStream 분리